Fixed bug in blank screens in Opera due to overflow hidden. Also fixes most browsers for horizontal scrollbar introduced due to box-shadow quirks. Fixes #58

--- a/bonfire/themes/admin/css/ui.css
+++ b/bonfire/themes/admin/css/ui.css
@@ -4,11 +4,11 @@
 
 .view {
 	height: 100%;
-	width: 100%;
+	display: block;
 	padding: 0;
 	position: relative;
 	overflow: hidden;
-	background: #fff;
+	background: red;
 }
 
 .scrollable {
